# keys-personal-wiki

./: .markdownlint.yaml  LICENSE  README.md  cspell.json  cspell_dictionary.txt
.github/workflows/: deploy.yml
barriers_and_resolutions/: powershell_execution_failed.md
database/: setup_postgres_database_using_psql.md
devops/: learning_roadmap.md
keys-wiki-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
keys-wiki-site/docs/: intro.md  intro.mdx
keys-wiki-site/docs/barriers-and-resolutions/: _category_.json  powershell-execution-failed.md
keys-wiki-site/docs/database/: _category_.json  setup_postgres_database_using_psql.md
keys-wiki-site/docs/devops/: _category_.json  learning_roadmap.md
keys-wiki-site/docs/docusaurus/: _category_.json  deployment.md  deployment.py
keys-wiki-site/docs/knowledge-base/: home.md
keys-wiki-site/docs/projects/: home.md
keys-wiki-site/docs/python/: _category_.json  gRPC_python.md  poetry_py_dependency_management.md  py_version_management_pyenv.md  (+1 more)
python/: poetry.md  poetry_py_dependency_management.md  py_version_management_pyenv.md  pyproject.toml  ruff_formatter.md  ruff_formatter_and_linter.md
python/gRPC/: __init__.py
python/gRPC/docs/: gRPC_python.md
python/gRPC/src/: greet_pb2_grpc.py
python/src/gRPC/: greet_pb2.py
resources/: footer_template.md
software_tools_hacks/: git_cli_tips.md
src/devops/: powershell-scripting-tutorial.ps1
src/python/: pyproject.toml  ruff.toml
src/python/src/gRPC/: greet_client.py  greet_server.py
src/python/src/gRPC/protos/: greet.proto
(+71 files in other folders)
